<resources>
    <string name="app_name">PharmacyProjects</string>
    <string name="pharmacy_logo">Pharmacy LOGO</string>
    <string name="pharmacy">Pharmacy Project</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_registered">Not Registered?</string>
    <string name="please_enter_your_email_address">Please Enter Your Email Address</string>
    <string name="please_enter_your_password">Please Enter Your Password</string>
    <string name="login">LOGIN</string>
    <string name="user_id">USER ID:</string>
    <string name="view_profile">VIEW PROFILE</string>
    <string name="view_users">VIEW USERS</string>
    <string name="notifications_logo">Notifications Logo</string>
    <string name="view_notification">VIEW NOTIFICATION</string>
    <string name="medicineLogo">Medicine Logo</string>
    <string name="drug_management">DRUG MANAGEMENT</string>
    <string name="settings_logo">settings Logo</string>
    <string name="settings_button">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="name">NAME:</string>
    <string name="profileImage">Profile Image</string>
    <string name="admin_user_gender">GENDER:</string>
    <string name="admin_full_name">FULL NAME:</string>
    <string name="admin_showProfileImage">show the user profile image</string>
    <string name="admin_user_profile">Admin Profile</string>
    <string name="admin_email_address">EMAIL ADDRESS:</string>
    <string name="admin_name">NAME:</string>
    <string name="admin_profileImage">Profile Image</string>
    <string name="admin_page">Admin Page</string>
    <string name="admin_date_of_birth">DATE OF BIRTH:</string>
    <string name="admin_role">MY ROLE:</string>
    <string name="admin_residential_address">RESIDENTIAL ADDRESS:</string>
    <string name="admin_country">COUNTRY:</string>
    <string name="admin_update_user">UPDATE USER</string>
    <string name="email_address">EMAIL ADDRESS:</string>
    <string name="full_name">FULL NAME:</string>
    <string name="user_gender">GENDER:</string>
    <string name="user_date_of_birth">DATE OF BIRTH:</string>
    <string name="user_country">COUNTRY:</string>
    <string name="user_state">STATE:</string>
    <string name="user_residential_address">RESIDENTIAL ADDRESS:</string>
    <string name="my_role">MY ROLE:</string>
    <string name="user_page">User Page</string>
    <string name="update_user">UPDATE USER</string>
    <string name="showProfileImage">show the user profile image</string>
    <string name="user_profile">User Profile</string>
    <string name="back">BACK</string>
    <string name="order_logo">order Logo</string>
    <string name="order_management_button">ORDER MANAGEMENT</string>
    <string name="drugs">DRUG MANAGEMENT</string>
     <string name="admin_state">STATE:</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="delete_profile">DELETE PROFILE</string>
    <string name="admin_delete_profile">DELETE PROFILE</string>
    <string name="admin_update_profile">UPDATE PROFILE</string>
    <string name="product_image">product Image</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">PRODUCT NAME:</string>
    <string name="product_description">PRODUCT DESCRIPTION:</string>
    <string name="product_price">PRODUCT PRICE:</string>
    <string name="please_enter_the_name_of_the_product">please enter the name of the product</string>
    <string name="searchbox">SEARCH:</string>
    <string name="product_quantity">PRODUCT QUANTITY:</string>
    <string name="Admin_please_enter_username">Please Enter Username</string>
    <string name="admin_user_ImageView">Admin User Image View</string>
    <string name="full_name_admUsr">FULL NAME:</string>
    <string name="edit_adm_button">EDIT</string>
    <string name="delete_adm_user">DELETE</string>
    <string name="Admin_add_drugs">ADD MEDICINE</string>
    <string name="drug_image">Drug Image</string>
    <string name="edit_drug_interface">EDIT MEDICINE INTERFACE</string>
    <string name="admin_Edt_please_enter_drug_name">Please Enter Drug Name</string>
    <string name="Adm_please_enter_drug_description">Please Enter Drug Description</string>
    <string name="edt_Adm_drug_price">MEDICINE PRICE</string>
    <string name="edt_Adm_drug_quantity">MEDICINE QUANTITY</string>
    <string name="adm_edt_manufacture_date">Manufacture Date</string>
    <string name="edt_Adm_please_enter_the_expiry_date">Please Enter the Expiry Date</string>
    <string name="Admin_btn_edit_drug">UPDATE MEDICINE INFORMATION</string>
    <string name="Admin_Drug_remove_drug">REMOVE DRUG INFORMATION</string>
    <string name="Adm_drug_brand_Text">MEDICINE Brand:</string>
    <string name="drug_Adm_medicine_types">Medicine Types</string>
    <string name="adm_drug_medicine_supplier">Medicine Supplier:</string>
    <string name="drug_delivery_types_Adm">MEDICINE Delivery Types</string>
    <string name="adm_enter_drug_manufacture_date">Enter MEDICINE Manufacture Date</string>
    <string name="adm_enter_product_price">Enter Product Price</string>
    <string name="adm_enter_the_product_quantity">Enter the Product Quantity:</string>
    <string name="adm_Spinner_select_drug_brand">Select Drug Brand</string>
    <string name="adm_enter_drug_name">Enter MEDICINE Name</string>
    <string name="adm_edt_please_enter_drug_id">please enter MEDICINE ID</string>
    <string name="adm_add_drug_form">Add MEDICINE Form</string>
    <string name="adm_enter_drug_expiry_date">Enter Drug Expiry Date</string>
    <string name="adm_add_drugs">ADD MEDICINE</string>
    <string name="adm_button_back"><![CDATA[<BACK>]]></string>
    <string name="adm_tv_select_supplier">Select Supplier</string>
    <string name="adm_select_drug_delivery">Select MEDICINE Delivery</string>
    <string name="adm_enter_drug_description">Enter MEDICINE Description</string>
    <string name="drugProductImage">MEDICINE Image</string>
    <string name="userProduct_drugprice">Price:</string>
</resources>